# poweralertd

./: .build.yml  Cargo.toml  README.md  dbus.h  list.c  list.h  main.c  meson.build  meson_options.txt  notify.c  notify.h  poweralertd.1.scd  upower.c  upower.h
contrib/systemd-user/: poweralertd.service.in
src/: main.rs
